<resources>
    <string name="app_name">WorkTrackr</string>
    <string name="home_title">WorkTrackr</string>
    <string name="login">   Welcome to the WorkTrackr app.
        <br><b>Login</b> if you already have an account.</br>
        <br><b>Register</b> to get started with the app.</br>
    </string>
    <string name="register_btn">REGISTER</string>
    <string name="login_btn">LOGIN</string>
    <string name="login_title">Log into the app</string>
    <string name="login_info"><font color="#00C9B8"><b>Log in</b></font> if you already have an account.
    </string>
    <string name="login_email">Enter your email</string>
    <string name="title_password">Enter your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="no_account"> Don\'t have an account?
        <font color="#00C9B8"><b>Register</b></font></string>
    <string name="register_title">Create an account</string>
    <string name="register_info"><font color="#00C9B8"><b>Register</b></font> to get started with the app.
    </string>
    <string name="title_full_name">Enter your full name</string>
    <string name="title_email">Enter your email</string>
    <string name="title_username">Enter firm name</string>
    <string name="til_password">Enter your password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="btn_register">REGISTER</string>
    <string name="has_account"> Already have an account?
        <font color="#00C9B8">
            <b>Log in</b></font></string>
    <string name="home">WorkTrackr</string>
    <string name="home_sub_title">Welcome to the home page.</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="logo_title">The best work order app around!</string>
    <string name="resetPass_title">Reset your password</string>
    <string name="reset_title">Reset your password</string>
    <string name="reset_sub_title"><font color="#00C9B8">Reset password</font> if you forgot your password.
    </string>
    <string name="reset_password_btn">RESET PASSWORD</string>
    <string name="back_to_login">Back to <font color="#00C9B8"><b>Login</b></font></string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="pause">Break</string>
    <string name="punch_in">Start work</string>
    <string name="punch_out">End work</string>
    <string name="elapsed_time">Time spent working: 00:00:00</string>
    <string name="paused_time">Time spent on break: 00:00:00</string>
    <string name="tools_used">Tools used</string>
    <string name="materials_used">Materials used</string>
    <string name="todo">TODO</string>
    <string name="type_of_job">Type of job</string>
    <string name="choose_job">Select your job</string>
    <string name="job_type">Select job type</string>

    <string-array name="job_options">
        <item>Choose job type</item>
        <item>Option 1</item>
        <item>Option 2</item>
        <item>Option 3</item>
        <!-- Add more options as needed -->
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="time_spent_on_break">Time spent on break:</string>
    <string name="time_spent_working">Time spent working:</string>
    <string name="start_time">Start time:</string>
    <string name="end_time">End time:</string>
    <string name="your_full_name">Your full name:</string>
    <string name="firm_name">Firm name:</string>
    <string name="branch_of_job">Branch of job:</string>
    <string name="your_job">Your job:</string>
    <string name="used_tools">Tools used:</string>
    <string name="used_mats">Materials used:</string>
    <string name="delete">Delete work</string>
    <string name="save_work">Save work</string>
    <string name="your_work_order">Your work order:</string>
    <string name="your_work_orders">Your work orders:</string>
    <string name="your">Work order sheet:</string>

</resources>